# advent-of-code

./: Cargo.toml  README.md
aoc2022/: Cargo.toml
aoc2023/: Cargo.toml
aoc2024/: Cargo.toml
aoc2025/: Cargo.toml
util/src/: lib.rs
